--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+html{
+  background-color: gray;
+}
+
 body {
   font-size: 14px;
   color: #333;
-  margin: 0;
+  margin: 0 60px 0 60px;
+  padding: 0px;
+  background-color: white;
 }
 
 h1,h2,h3,h4,h5 {
@@ -10,7 +16,7 @@ h1,h2,h3,h4,h5 {
 }
 
 header {
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .container {
@@ -19,12 +25,11 @@ header {
 }
 
 .header-title-area {
-  margin-top: 40px;
   margin-bottom: 30px;
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -66,6 +71,10 @@ header {
 .copyright {
   color: #777;
   text-align: center;
+  margin-bottom: 0px;
+  padding-top: 40px;
+  border-top: 2px solid gray;
+  
 }
 
 .main:after {
@@ -118,6 +127,19 @@ header {
   display:block;
 }
 
-.copyright {
-  border-top: 2px solid gray;
+
+footer{
+  height: 100px;
+}
+
+li{
+  list-style: none;
+}
+
+.blog {
+  margin-left: 180px;
+}
+
+.blog2 {
+  margin-left: 70px;
 }
